# GAUSS

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  InstallGAUSS_OSX.sh  InstallGAUSS_Ubuntu.sh  LICENSE  README.md  config.cmake  exampleEigenFitRatioTest.cpp  qt_script.qs  qt_script_osx.qs
cmake/: FindGauss.cmake  FindMATLAB.cmake
data/meshes/PLY/: Beam.ply
data/meshesTetWild/: archbridge.mesh
data/meshesTetWild/alien/: alien_0.ele  alien_0.mesh  alien_0.node  alien_1.ele  alien_1.mesh  alien_1.node  alien_2.ele  alien_2.mesh  alien_2.node  alien_3.ele  alien_3.mesh  alien_3.node  alien_4.ele  alien_4.mesh  alien_4.node  alien_5.ele  alien_5.mesh  alien_5.node
data/meshesTetWild/anchor/: anchor_0.ele  anchor_0.mesh  anchor_0.node  anchor_1.ele  anchor_1.mesh  anchor_1.node  anchor_2.ele  anchor_2.mesh  anchor_2.node  anchor_3.ele  anchor_3.mesh  anchor_3.node  anchor_4.ele  anchor_4.mesh  anchor_4.node  anchor_5.ele  anchor_5.mesh  anchor_5.node  anchor_6.ele  anchor_6.mesh  anchor_6.node
data/meshesTetWild/animal/: animal_0.ele  animal_0.mesh  animal_0.node  animal_1.ele  animal_1.mesh  animal_1.node  animal_2.ele  animal_2.mesh  animal_2.node  animal_3.ele  animal_3.mesh  animal_3.node  animal_4.ele  animal_4.mesh  animal_4.node  animal_5.ele  animal_5.mesh  animal_5.node  animal_6.ele  animal_6.mesh  animal_6.node  animal_7.ele  animal_7.mesh  animal_7.node
data/meshesTetWild/arm/: arm_0.ele  arm_0.mesh  arm_0.node  arm_1.ele  arm_1.mesh  arm_1.node  arm_2.ele  arm_2.mesh  arm_2.node  arm_3.ele  arm_3.mesh  arm_3.node
data/meshesTetWild/arma/: arma_0.ele  arma_0.mesh  arma_0.node  arma_1.ele  arma_1.mesh  arma_1.node  arma_2.ele  arma_2.mesh  arma_2.node  arma_3.ele  arma_3.mesh  arma_3.node  arma_4.ele  arma_4.mesh  arma_4.node  arma_5.ele  arma_5.mesh  arma_5.node  arma_6.ele  arma_6.mesh  arma_6.node
data/meshesTetWild/armadillo/: armadillo_0.ele  armadillo_0.mesh  armadillo_0.node  armadillo_1.ele  armadillo_1.mesh  armadillo_1.node  armadillo_2.ele  armadillo_2.mesh  armadillo_2.node  armadillo_3.ele  armadillo_3.mesh  armadillo_3.node
data/meshesTetWild/brick/: brick_0.ele  brick_0.node  brick_1.ele  brick_2.ele  (+12 more)
data/meshesTetgen/: bucklingBarCoarse.ele  bucklingBarCoarse.node
data/shaders/: robustwireframe.frag  robustwireframe.geom  robustwireframe.vert
data/simple_muscle/: config.json
mathematica/: FEM Notebook.nb
src/Base/: CMakeLists.txt
src/Base/cpp/: Assembler.cpp  AssemblerMVP.cpp  DOF.cpp  PhysicalSystem.cpp  TimeStepperEulerImplicitLinear.cpp  TimeStepperEulerImplicitLinearCProjection.cpp
src/Base/include/: Assembler.h  AssemblerMVP.h  AssemblerParallel.h  Constraint.h  ConstraintFixedPoint.h  ConstraintSlide.h  DOF.h  DOFList.h  DOFPair.h  DOFParticle.h  DOFRotation.h  ForceExternal.h  ForcePoint.h  GaussIncludes.h  PhysicalSystem.h  SolverPardiso.h  State.h  TimeStepper.h  TimeStepperEulerImplicit.h  TimeStepperEulerImplicitBFGS.h  TimeStepperEulerImplicitLinear.h  TimeStepperEulerImplicitLinearCProjection.h  TimeStepperNewmark.h  TimeStepperNewmarkLinear.h  TimeStepperStatic.h  UtilitiesBase.h  World.h
src/Collisions/: CMakeLists.txt
src/Core/: CMakeLists.txt  README.txt
src/Core/cpp/: Array.cpp  ArrayDefault.cpp  CoreOSSpecific.cpp  MultiVector.cpp  Utilities.cpp  UtilitiesGeometry.cpp  UtilitiesIO.cpp
src/Core/include/: Array.h  ArrayDefault.h  CoreDefines.h  CoreOSSpecific.h  GetArrayType.h  MultiVector.h  Utilities.h  UtilitiesEigen.h  UtilitiesGeometry.h  UtilitiesIGL.h  UtilitiesIO.h  UtilitiesMATLAB.h  UtilitiesOMP.h
src/EigenFit/: CMakeLists.txt
src/Embeddings/: CMakeLists.txt
src/Examples/: CMakeLists.txt  example1.cpp  example10.cpp  example11.cpp  example12.cpp  example13.cpp  example14.cpp  example15.cpp  example16.cpp  example17.cpp  example18.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.m  example9.cpp  exampleBarEigenFitBE.cpp  exampleBunnyEigenFitBE.cpp  exampleCollisionsFloor.cpp  exampleEigenFit.cpp  exampleEigenFitBE.cpp  exampleEigenFitBE.hpp  exampleEigenFitFunctionalBE.cpp  exampleEigenFitIM.cpp  exampleEigenFitLinear.cpp  exampleEigenFitRBE.cpp  exampleEigenFitRIM.cpp  exampleEigenFitRIMdynamic1.cpp  exampleEigenFitRIMdynamic2.cpp  exampleEigenFitStvkBE.cpp  exampleImplicitIntegration.cpp  exampleK.cpp  exampleLinearModes.cpp  exampleLoubignac.cpp  exampleMuscle.cpp  exampleNeohookeanHFixedTet.cpp  exampleNeohookeanTet.cpp  (+6 more)
src/FEM/: CMakeLists.txt
src/FEM/include/: DOFList.h  Element.h  ElementTetLinear.h  ElementTypes.h  Energy.h  EnergyLoubignac.h  EnergyMuscle.h  EnergyNeohookean.h  EnergyNeohookeanHFixed.h  EnergyPrincipalStretch.h  EnergyStvk.h  EnergyStvkHFixed.h  FEMIncludes.h  LoubignacIterations.h  MaterialsPrincipalStretch.h  PhysicalSystemFEM.h  Quadrature.h  QuadratureExact.h  QuadratureHex8.h  QuadraturePlaneTri1.h  QuadratureTetConstant.h  QuadratureTetLinear.h  ShapeFunction.h  ShapeFunctionHexTrilinear.h  ShapeFunctionPlaneLinear.h  TimeStepperLinearModes.h  UtilitiesFEM.h
src/MATLAB/: CMakeLists.txt  UtilitiesEigenMex.h  WorldFEM.m  WorldFEM_Interface.cpp  class_handle.hpp
src/Optimization/: CMakeLists.txt
src/ParticleSystem/: CMakeLists.txt
src/ParticleSystem/cpp/: DOFParticle.cpp  ForceSpring.cpp  PhysicalSystemParticles.cpp
src/ParticleSystem/include/: DOFParticle.h  ForceParticleGravity.h  ForceSpring.h  ParticleSystemIncludes.h  PhysicalSystemParticles.h
src/RigidBodies/: CMakeLists.txt
src/SolversLinear/: CMakeLists.txt
src/SolversLinear/cpp/: SolverCG.cpp
src/SolversLinear/include/: SolverCG.h  SolverPardiso.h
src/SpectraPardiso/: CMakeLists.txt
src/SpectraPardiso/cpp/: SpectraRegularInversePardiso.cpp
src/SpectraPardiso/include/: SparseCholeskyPardiso.h  SparseRegularInversePardiso.h
src/Tests/: CMakeLists.txt  tests.cpp
src/UI/: CMakeLists.txt  UISetup.txt
src/UI/cpp/: PhysicsEntity.cpp
src/UI/include/: GaussView.h  PhysicsEntity.h  Qt3DIncludes.h  RenderableEmbeddedSurface.h  RenderableFEM.h  RenderableFEMHex.h  RenderableFEMTri.h  RenderableRigidBody.h  Scene.h  Update.h
(+260 files in other folders)
