
cmake_minimum_required(VERSION 3.2)

project (Base)
set(CMAKE_CXX_STANDARD 14)
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${GAUSS_BINARY_DIR}/bin )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${GAUSS_BINARY_DIR}/lib )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${GAUSS_BINARY_DIR}/lib )

message(WARNING ${GAUSS_BINARY_DIR})

#Second, for multi-config builds (e.g. msvc)
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${GAUSS_BINARY_DIR}/bin )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${GAUSS_BINARY_DIR}/pants )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )


file(GLOB HEADER_CODE ${Base_SOURCE_DIR}/include/*.h)
file(GLOB SRC_CODE ${Base_SOURCE_DIR}/cpp/*.cpp)

include_directories(${GAUSS_INCLUDE_DIR})
add_library(Base ${HEADER_CODE} ${SRC_CODE})
