
cmake_minimum_required(VERSION 3.5)

project (FEM)

set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${GAUSS_BINARY_DIR}/bin )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${GAUSS_BINARY_DIR}/lib )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${GAUSS_BINARY_DIR}/lib )

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

file(GLOB HEADER_CODE ${FEM_SOURCE_DIR}/include/*.h)
file(GLOB SRC_CODE ${FEM_SOURCE_DIR}/cpp/*.cpp)

set(GAUSS_INCLUDE_DIR ${GAUSS_INCLUDE_DIR}  ${FEM_SOURCE_DIR}/include CACHE INTERNAL "" FORCE)

include_directories(${GAUSS_INCLUDE_DIR})
add_library(FEM ${HEADER_CODE} ${SRC_CODE})